welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: value to5 is not a member of Int
	for (k<-1 to5){
                  ^