welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(estSurBiscuit==false){
	avance();
}
while(estSurBiscuit==true){
	prendBiscuit();
	for (k<-1 to5){
		recule();
	}
}
